# pinned_mimalloc

./: .gitignore  CMakeLists.txt
cmake/: FindHWLOC.cmake  FindLibfabric.cmake  config.hpp.in  external.cmake
include/: allocator.hpp  backend_none.hpp  base.hpp  concepts.hpp  config.hpp  context.hpp  cuda_pinned.hpp  device.hpp  device_memory.hpp  ex_mimalloc.hpp  ex_stdmalloc.hpp  ext_mimalloc.hpp  ext_stdmalloc.hpp  host_memory.hpp  log.hpp  mimalloc.hpp  not_pinned.hpp  numa.hpp  old_resource_builder  pinned.hpp  pmimalloc.hpp  register.hpp  register_device.hpp  resource copy.hpp  resource.hpp  resource_builder.hpp  scope_exit.hpp  selector.hpp  simple.hpp  task_group.hpp  thread_affinity.hpp  user_device_memory.hpp  user_host_memory.hpp
include/external_allocators/: MPI_alloc.hpp  cuda_alloc.hpp  hip_alloc.hpp  std_alloc.hpp
include/libfabric/: fabric_error.hpp  memory_region.hpp
include/pmimalloc/: allocator.hpp  backend_none.hpp  base.hpp  builders.hpp  context.hpp  ext_mimalloc.hpp  ext_stdmalloc.hpp  handled_memory.hpp  handler.hpp  host_device_memory.hpp  host_memory.hpp  indexed_tl_ptr.hpp  log.hpp  memory.hpp  mirror_memory.hpp  mirrored.hpp  mirrored_user_memory.hpp  mirroring.hpp  monotonic_buffer.hpp  not_pinned.hpp  numa.hpp  pinned.hpp  pinning.hpp  pinning_cuda.hpp  resource.hpp  scope_exit.hpp  simple.hpp  task_group.hpp  user_device_memory.hpp  user_host_memory.hpp
include/ucx/: error.hpp  region.hpp
src/: device_cuda.cpp  device_emulate.cpp  device_hip.cpp  device_none.cpp  ex_mimalloc.cpp  ext_mimalloc.cpp  log.cpp  mimalloc.cpp  numa.cpp  pmimalloc.cpp  resource.cpp  task_group.cpp  test.cpp  thread_affinity.cpp
src/device/: device_cuda.cpp  device_hip.cpp  device_none.cpp
src/libfabric/: backend.cpp  backend.hpp  context.hpp
src/none/: context.hpp
src/ucx/: backend.hpp  error.hpp  handle.hpp  region.hpp  rma_context.hpp
test/: CMakeLists.txt  test_allocator.cpp  test_allocator_N.cpp  test_arena.cpp  test_functions.hpp  test_heap_per_thread_N.cpp  test_host.cpp  test_host_arenas.cpp  test_host_arenas_threads.cpp  test_host_pmr.cpp  test_host_pmr_threads.cpp  test_host_threads.cpp  test_mirror.cpp  test_mirror_arenas.cpp  test_mirror_arenas_threads.cpp  test_mirror_pmr.cpp  test_mirror_pmr_threads.cpp  test_mirror_threads.cpp  test_multi_arena.cpp
tools/: clang-reformat.sh  pre-commit
